# Radar-Contact

./: .gitattributes  .gitignore  2D_ATC.sln  ATTESTATION.md  CHANGELOG.md  CMakeLists.txt  INSTALLATION.md  README.md  TERMS.md  date.csv  disable_modules.props  env_fixes.h  launcher.command  main.cpp  radar-contact.sln  tastatura.txt
.github/actions/clang-tidy/: action.yml
.github/actions/configure-cmake/: action.yml
.github/actions/cppcheck/: action.yml
.github/actions/create-release/: action.yml
.github/actions/install-linux-deps/: action.yml
.github/actions/install-packages/: action.yml
.github/actions/process-artifacts/: action.yml
.github/actions/runtime-checks/: action.yml
.github/workflows/: cmake.yml
2D_ATC/: 2D_ATC.vcxproj  2D_ATC.vcxproj.filters  Airplane.cpp  Airplane.cpp~RF14fffa.TMP  Airplane.h  AssetsManager.cpp  AssetsManager.h  Button.cpp  Button.h  Career.cpp  Career.h  Constants.h  ContinueGame.cpp  ContinueGame.h  Game.cpp  Game.h  Input.cpp  Input.h  Map.cpp  Map.h  Math.cpp  Math.h  Menu.cpp  Menu.h  Microburst.cpp  NewGame.cpp  Path.cpp  Path.h  Settings.cpp  Settings.h  SideMenu.cpp  SideMenu.h  Taskbar.cpp  Taskbar.h
2D_ATC/Release/: 2D_ATC.exe.recipe  2D_ATC.iobj  2D_ATC.ipdb
2D_ATC/Release/2D_ATC.tlog/: 2D_ATC.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
2D_ATC/x64/Debug/: vc143.idb
2D_ATC/x64/Debug/2D_ATC.tlog/: 2D_ATC.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
2D_ATC/x64/Release/2D_ATC.tlog/: 2D_ATC.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
RC_LevelCreator/RC_LevelCreator/: AssetsManager.cpp  Engine.cpp  Engine.h  Main.cpp  Runway.cpp  Runway.h
RC_LevelCreator/RC_LevelCreator/x64/Debug/: vc143.idb
RC_MapEditor/RC_MapEditor/: AssetsManager.cpp  AssetsManager.h  Engine.cpp  Engine.h  Main.cpp
Resources/: game.txt  settings.txt
Resources/Career/: careerData.txt
Resources/airports/: EHAM.airport  KSFO.airport
Resources/airports/hungary/: radar.txt
Resources/airports/romania/: airports_list.txt  arrivalRoutes.txt  ground.txt  radar.txt  tower.txt
Resources/images/maps/romania/ground/: lrop_config.txt
cmake/: CompilerFlags.cmake  CopyHelper.cmake  CustomStdlibAndSanitizers.cmake  DetectLibcpp.cmake  Options.cmake
ext/include/csv-parser/: csv.hpp
ext/include/rlutil/: rlutil.h
header/: API.h  Airplane.h  AirplaneInfo.h  Airport.h  DataAPI.h  DataFetcher.h  FlightInfo.h  FlightsTable.h  FlyingEntity.h  Game.h  Helicopter.h  HotAirBalloon.h  LiveAPI.h  Math.h  Menu.h  MockAPI.h  OZN.h  ResourcesManager.h  Satellite.h  SpaceEntity.h  StateMachine.h  Waypoint.h  Weather.h  Window.h  utils.h
radar-contact/: Airplane.cpp  Airplane.h  Airport.cpp  Airport.h  AssetsManager.cpp  AssetsManager.h  Button.cpp  Button.h  Constants.h  ContinueGame.cpp  ControlArea.cpp  ControlArea.h  Engine.cpp  Engine.h  Game.cpp  Game.h  Input.cpp  Input.h  Main.cpp  Map.cpp  Map.h  Math.cpp  Math.h  Menu.cpp  Menu.h  Microburst.h  NewGame.h  Path.cpp  Path.h  Play.cpp  Play.h  Point.cpp  Point.h  Runway.cpp  Runway.h  Settings.cpp  Settings.h  Slider.cpp  Slider.h  radar-contact.vcxproj  (+1 more)
radar-contact/Release/: radar-contact.exe.recipe  radar-contact.iobj  radar-contact.ipdb
radar-contact/Release/radar-contact.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  radar-contact.lastbuildstate
radar-contact/x64/Release/radar-contact.tlog/: radar-contact.lastbuildstate
resources/mock_api/: vatsim-data.json  weather-maps.json
resources/mock_api/Austria/: airtraffic.json  links.txt
resources/mock_api/Cyprus/: flyingEntities.json  links.txt
resources/mock_api/Denmark/: flyingEntities.json  links.txt
resources/mock_api/France/: airtraffic.json  links.txt
resources/mock_api/Greece/: airtraffic.json  links.txt
resources/mock_api/Iceland/: flyingEntites.json  links.txt
resources/mock_api/Poland/: flyingEntities.json  links.txt
resources/mock_api/Spain/: airtraffic.json  links.txt
resources/mock_api/Turkey/: airtraffic.json  links.txt
resources/mock_api/UK/: airtraffic.json  links.txt
resources/preview/: collision.webm  landing.webm
resources/regions/Austria/: airports.txt  long_lat.txt  waypoints.txt  weather_tiles.txt
resources/regions/Cyprus/: airports.txt  long_lat.txt  waypoints.txt  weather_tiles.txt
resources/regions/Denmark/: airports.txt  long_lat.txt  waypoints.txt  weather_tiles.txt
resources/regions/France/: airports.txt  long_lat.txt  waypoints.txt  weather_tiles.txt
resources/regions/Greece/: airports.txt  long_lat.txt  waypoints.txt  weather_tiles.txt
resources/regions/Iceland/: airports.txt  long_lat.txt  waypoints.txt  weather_tiles.txt
resources/regions/Poland/: airports.txt  long_lat.txt  waypoints.txt  weather_tiles.txt
resources/regions/Spain/: airports.txt  long_lat.txt  waypoints.txt  weather_tiles.txt
resources/regions/Turkey/: airports.txt  long_lat.txt  waypoints.txt  weather_tiles.txt
resources/regions/UK/: airports.txt  long_lat.txt  waypoints.txt  weather_tiles.txt
scripts/: build_cppcheck.sh  cmake.sh  run_cppcheck.sh  run_sanitizers.sh  run_test.sh  run_valgrind.sh
source/: API.cpp  Airplane.cpp  Airplane.hpp  AirplaneInfo.cpp  Airport.cpp  Airport.hpp  AppWindow.cpp  AppWindow.hpp  DataAPI.cpp  DataFetcher.cpp  DataFetcher.hpp  FlightInfo.cpp  FlightInfo.hpp  FlightsTable.cpp  FlightsTable.hpp  FlyingEntity.cpp  FlyingEntity.hpp  Game.cpp  Game.hpp  Helicopter.cpp  Helicopter.hpp  HotAirBalloon.cpp  LiveAPI.cpp  LiveAPI.hpp  Math.cpp  Math.hpp  Menu.cpp  Menu.hpp  MockAPI.cpp  MockAPI.hpp  OZN.cpp  OneDecimalFloatingPoint.h  Region.cpp  Region.hpp  RegionButton.cpp  RegionButton.hpp  ResourcesManager.cpp  ResourcesManager.hpp  Satellite.cpp  SpaceEntity.cpp  (+12 more)
